// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shield fraction snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  background-color: #69768C;
  color: #ffffff;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  background-color: #a07943;
  color: #ffffff;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      percent
    </div>
    <div
      class="emotion-2"
    >
      50%
    </div>
  </div>
</DocumentFragment>
`;

exports[`Shield overview 0 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  background-color: #69768C;
  color: #ffffff;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  background-color: #071542;
  color: #ffffff;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      Jaden Kozey
    </div>
    <div
      class="emotion-2"
    >
      1.0.0
    </div>
  </div>
</DocumentFragment>
`;

exports[`Shield overview 1 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  background-color: #69768C;
  color: #ffffff;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  background-color: #3e1402;
  color: #ffffff;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      Violet Jerde
    </div>
    <div
      class="emotion-2"
    >
      1.0.0
    </div>
  </div>
</DocumentFragment>
`;

exports[`Shield overview 2 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  background-color: #69768C;
  color: #ffffff;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  background-color: #303c4a;
  color: #ffffff;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      Oren Hermiston
    </div>
    <div
      class="emotion-2"
    >
      1.0.0
    </div>
  </div>
</DocumentFragment>
`;

exports[`Shield overview 3 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  background-color: #69768C;
  color: #ffffff;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  background-color: #4b412c;
  color: #ffffff;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      Randy Jones
    </div>
    <div
      class="emotion-2"
    >
      1.0.0
    </div>
  </div>
</DocumentFragment>
`;

exports[`Shield overview 4 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  background-color: #69768C;
  color: #ffffff;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  background-color: #07632f;
  color: #ffffff;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      Vicenta Swaniawski
    </div>
    <div
      class="emotion-2"
    >
      1.0.0
    </div>
  </div>
</DocumentFragment>
`;

exports[`Shield percent snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  background-color: #69768C;
  color: #ffffff;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  background-color: #6d994a;
  color: #ffffff;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      zero
    </div>
    <div
      class="emotion-2"
    >
      80%
    </div>
  </div>
</DocumentFragment>
`;

exports[`Shield themeColor 0 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  background-color: #69768C;
  color: #ffffff;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  background-color: #ff9800;
  color: #454f5b;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      color
    </div>
    <div
      class="emotion-2"
    >
      palette2
    </div>
  </div>
</DocumentFragment>
`;

exports[`Shield themeColor 1 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  background-color: #69768C;
  color: #ffffff;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  background-color: #8338ec;
  color: #ffffff;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      color
    </div>
    <div
      class="emotion-2"
    >
      accentPalette0
    </div>
  </div>
</DocumentFragment>
`;

exports[`Shield themeColor 2 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  background-color: #69768C;
  color: #ffffff;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  background-color: #4caf50;
  color: #454f5b;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      color
    </div>
    <div
      class="emotion-2"
    >
      status_passed
    </div>
  </div>
</DocumentFragment>
`;

exports[`Shield themeColor 3 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  background-color: #69768C;
  color: #ffffff;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  background-color: #ff006e;
  color: #ffffff;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      color
    </div>
    <div
      class="emotion-2"
    >
      accentPalette2
    </div>
  </div>
</DocumentFragment>
`;

exports[`Shield themeColor 4 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  background-color: #69768C;
  color: #ffffff;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  background-color: #1976d2;
  color: #ffffff;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      color
    </div>
    <div
      class="emotion-2"
    >
      palette5
    </div>
  </div>
</DocumentFragment>
`;

exports[`Shield zeroValue snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  background-color: #69768C;
  color: #ffffff;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 4px;
  padding-right: 4px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  background-color: #227fc0;
  color: #ffffff;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      zero
    </div>
    <div
      class="emotion-2"
    >
      0
    </div>
  </div>
</DocumentFragment>
`;
